testsuite/bsc.typechecker/typeclasses/ATFDeclParamMismatch.bs.bsc-out.expected
checking package dependencies
compiling ATFDeclParamMismatch.bs
Error: "ATFDeclParamMismatch.bs", line 7, column 7: (T0158)
  Type family declaration for `Elem' mentions type variable `g' not in the
  variables of its class `Container': f,e
